--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -53,7 +53,7 @@ body {
   background-attachment: fixed;
 }
 #test2 {
-  background-image: url("../images/test2.jpg");
+  background-image: url("../images/charlotte.jpg");
 }
 #test3 {
   background-image: url("../images/test3.jpg");
