--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -26,6 +26,10 @@ body {
   height: 10vh;
   background-color: black;
 }
+#clickMe {
+  font-size: 4vh;
+  color: #1d1d1d;
+}
 #titleWrap {
   width: 80vw;
   margin-left: 10vw;
@@ -40,7 +44,7 @@ body {
 }
 
 /*Temp Test Image*/
-#test, #test2, #test3 {
+#test, #test2, #test3, #test4 {
   height: 40vh;
   width: auto;
   /* background-image: url("../images/test.jpg"); */
@@ -57,6 +61,9 @@ body {
 }
 #test3 {
   background-image: url("../images/test3.jpg");
+}
+#test4 {
+  background-image: url("../images/tech.jpg");
 }
 .heading {
   font-family: 'Caveat', cursive;
@@ -137,6 +144,14 @@ body {
 img {
   width: 10vh;
   height: 10vh;
+}
+#me {
+  width: 15vw;
+  height: auto;
+  border-radius: 20%;
+  filter: saturate(0%);
+  margin-right: 1vw;
+  float: left;
 }
 ::-webkit-scrollbar { 
   display: none;
